# Quantization

./: .gitignore  LICENSE  README.md  pyproject.toml
quantize/fp8/: quantize.py
quantize/msfp/: __init__.py
src/fp8/: __init__.py
src/msfp/: quantize.py
